--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 #For HTTP methods PUT, PATCH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
