--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL properties
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db
+spring.datasource.url=jdbc:mysql://localhost:3307/mydb
 spring.datasource.username=root
 spring.datasource.password=root
 
